<resources>
    <string name="app_name">Crypto Panel</string>

    <string name="title_activity_coinlist">CoinlistActivity</string>


    <string name="title_activity_open_orders">OpenOrders</string>
    <string name="title_activity_tab">TabActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy">Buy</string>
    <string name="stop_loss_sell">Stop Loss Sell</string>
    <string name="sell">Sell</string>
    <string name="_100">100%</string>
    <string name="_50">50%</string>
    <string name="buy_qty">Buy Qty:</string>
    <string name="sell_qty">Sell Qty:</string>
    <string name="_3454">3454</string>
    <string name="_23234">23234</string>
    <string name="_25">25%</string>
    <string name="current_price">Current Price:</string>
    <string name="buy_sell_price">Buy/Sell price :</string>
    <string name="qty_to_buy">Qty to buy :</string>
    <string name="qty_to_sell">Qty to sell :</string>
    <string name="_0_000033">0.000033</string>
    <string name="buy_sell_selection">Buy / Sell selection</string>
    <string name="navibar">NaviBar</string>
    <string name="cryptopanel">Crypto Panel</string>
    <string name="btc_usdt">BTC/USDT</string>
    <string name="_435345">435345</string>
    <string name="_1023">1023</string>
    <string name="_10">10%</string>
    <string name="coinname">CoinName</string>
    <string name="qty">Qty</string>
    <string name="btc">BTC</string>
    <string name="order_type">Order type :</string>
    <string name="price">price</string>
    <string name="amount">Amount :</string>
    <string name="btc_eq">Btc_Eq:</string>
    <string name="_300">300</string>
    <string name="_0_00003">0.00003</string>
    <string name="textview">TextView</string>
    <string name="date">date</string>
    <string name="_0x0323424">0x0323424</string>
    <string name="_400">400</string>
    <string name="_btc">btc</string>
    <string name="_10_23_00">10:23:00</string>
    <string name="_0_00035">0.00035</string>
    <string name="_3242">3242</string>
    <string name="_0_00021">0.00021</string>
    <string name="fill_the_fields_with_your_binance_private_and_public_data">Fill the fields with your Binance private and public data.</string>
    <string name="public_key">public KEY</string>
    <string name="private_key">private KEY</string>
    <string name="use_those_keys_only_with_cryptopanel_app_dont_share_it">Use those keys only with Crypto Panel app, dont share it!!!!</string>
    <string name="check">Check</string>
    <string name="save">Save</string>
    <string name="hide_dust">Hide dust</string>
    <string name="_0">0</string>
    <string name="total_funds_btc">Total Funds (BTC):</string>
    <string name="total_funds_usdt">Total Funds (USDT):</string>
    <string name="flashlight">Flashlight</string>
    <string name="s">- Price :</string>
    <string name="result">Result:</string>
    <string name="pending">Pending</string>
    <string name="configure_api_keys">Configure Binance API Keys</string>
    <string name="wallet">Wallet</string>
    <string name="open_orders">Open orders</string>
    <string name="settings">Settings</string>
    <string name="_1min">1 minute</string>
    <string name="_3min">3 minutes</string>
    <string name="_5min">5 minutes</string>
    <string name="_15min">15 minutes</string>
    <string name="_30min">30 minutes</string>
    <string name="_1hour">1 hour</string>
    <string name="_2hour">2 hours</string>
    <string name="_4hour">4 hours</string>
    <string name="_8hour">8 hours</string>
    <string name="_12hour">12 hours</string>
    <string name="_1day">1 day</string>
    <string name="possible_pump_by_price_increase">Possible Pump by price increase</string>
    <string name="price_0_00">Price: 0.00</string>
    <string name="old_price_0_323434">Old Price: 0.323434</string>
    <string name="change">Change :</string>
    <string name="_3_03">3,03%</string>
    <string name="enable_pump_detection">Pump Detection</string>
    <string name="alerts">Alerts</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="subscribe_buy_sell">Subscribe Buy/Sell</string>
    <string name="todo">TODO</string>
    <string name="todos">TODOS</string>

</resources>
