<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_id"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="false"
            android:baselineAlignBottom="false"
            android:cropToPadding="false"
            app:srcCompat="@drawable/bitcoin_trans"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/flashlight"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/line_sep"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/title"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="3dp"
                android:background="@color/BKGROUND_DARK"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="7dp"
                android:text="@string/order_type"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/type_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/type"
                android:layout_alignParentStart="false"
                android:layout_toEndOf="@id/type"
                android:text="@string/sell"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_alignBaseline="@id/type"
                android:layout_alignParentStart="false"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/type_order"
                android:text="@string/s"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/price_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/type"
                android:layout_alignParentStart="false"
                android:layout_toEndOf="@id/price"
                android:text="@string/_0"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/result"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/result_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/result"
                android:layout_alignParentStart="false"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/result"
                android:text="@string/pending"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>